--- a/API/API.csproj
+++ b/API/API.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.1" />
+  </ItemGroup>
+
 </Project>
