Created ActivitiesController and Get methods

--- a/.gitignore
+++ b/.gitignore
@@ -475,3 +475,8 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+API/appsettings.json
+API/reactivities.db
+API/reactivities.db-shm
+API/reactivities.db-wal
+.vscode/settings.json
