Added a Mediator handler for Creating and Editing an activity

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <Folder Include="Activities\" />
+    <Folder Include="Activities\Commands\" />
     <Folder Include="Activities\Queries\" />
   </ItemGroup>
 
