--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="MediatR" Version="14.0.0" />
   </ItemGroup>
 
@@ -19,6 +20,7 @@
     <Folder Include="Activities\" />
     <Folder Include="Activities\Commands\" />
     <Folder Include="Activities\Queries\" />
+    <Folder Include="Core\" />
   </ItemGroup>
 
 </Project>
